--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Web</th></tr>
-<tr><td><a href="#t0">WebPWAMixpanelScript</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">76,651</td><td></td><td></td></tr>
+<tr><td><a href="#t0">VerifyURL</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">27,153</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Web</th></tr></tbody><tbody id="t0"><tr><th colspan="4">WebPWAMixpanelScript &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.zee5.MixpanelScripts.PWA_Web_Player</td><td><a href="#m0">checkPageName</a></td><td rowspan="1">1614080227897</td><td rowspan="1">61466</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Web</th></tr></tbody><tbody id="t0"><tr><th colspan="4">VerifyURL &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.VerifyURL.VerifyURL</td><td><a href="#m0">verifyPageresponse</a></td><td rowspan="1">1622137289120</td><td rowspan="1">14416</td></tr></tbody>
 </table>
-<h2>WebPWAMixpanelScript</h2><h3 id="m0">com.zee5.MixpanelScripts.PWA_Web_Player#checkPageName</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>VerifyURL</h2><h3 id="m0">com.VerifyURL.VerifyURL#verifyPageresponse</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
