--- a/test-output/old/Web/methods-alphabetical.html
+++ b/test-output/old/Web/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Web</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6773a3">  <td>21/02/23 17:07:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PWA_Web_Player.checkPageName()[pri:0, instance:com.zee5.MixpanelScripts.PWA_Web_Player@cad498c]">checkPageName</td> 
-  <td>main@1328718765</td>   <td></td> </tr>
-<tr bgcolor="6773a3">  <td>21/02/23 17:06:55</td>   <td>-12750</td> <td>&nbsp;</td><td title="&gt;&gt;PWA_Web_Player.init()[pri:0, instance:com.zee5.MixpanelScripts.PWA_Web_Player@cad498c]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1328718765</td>   <td></td> </tr>
-<tr bgcolor="6773a3">  <td>21/02/23 17:08:10</td>   <td>62710</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PWA_Web_Player.tearDown()[pri:0, instance:com.zee5.MixpanelScripts.PWA_Web_Player@cad498c]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1328718765</td>   <td></td> </tr>
+<tr bgcolor="d47cee">  <td>21/05/27 23:11:17</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyURL.init()[pri:0, instance:com.VerifyURL.VerifyURL@43bd930a]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@668210649</td>   <td></td> </tr>
+<tr bgcolor="d47cee">  <td>21/05/27 23:11:43</td>   <td>26440</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyURL.tearDown()[pri:0, instance:com.VerifyURL.VerifyURL@43bd930a]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@668210649</td>   <td></td> </tr>
+<tr bgcolor="d47cee">  <td>21/05/27 23:11:29</td>   <td>12017</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyURL.verifyPageresponse()[pri:0, instance:com.VerifyURL.VerifyURL@43bd930a]">verifyPageresponse</td> 
+  <td>main@668210649</td>   <td></td> </tr>
 </table>
