--- a/test-output/old/Web/toc.html
+++ b/test-output/old/Web/toc.html
@@ -22,8 +22,8 @@
 </tr></table>
 <table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>WebPWAMixpanelScript (1/0/0)</td><td valign='top' align='right'>
-  <a href='WebPWAMixpanelScript.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>VerifyURL (1/0/0)</td><td valign='top' align='right'>
+  <a href='VerifyURL.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
